# ros2_auto_navigation_car

./: .gitignore  CARLA_INTEGRATION_PLAN.md  README.md  check_dependencies.sh  dependency_report.txt  fix_guide.md  index.sh  install_dependencies.sh  rules.copilot.md  run_tests_and_optimize.sh  start_carla_integration.sh  test_frontend_json_handling.py  test_realtime_planning.py
.github/prompts/: rules.prompt.md
docs/: 00_project_overview.md  01_auto_msgs_module.md  02_auto_simulation_module.md  03_auto_perception_module.md  04_auto_planning_module.md  05_auto_control_module.md  06_auto_integration_test_module.md  07_system_testing_guide.md  README.md  git_workflow_guide.md
front-end/: package.json
front-end/src/: App.css
front-end/src/components/: Obstacles.tsx  ParkingLots.tsx  PathVisualizer.tsx  RoadMap.tsx  Scene3D.tsx  Vehicle.tsx
front-end/src/components/common/: CustomAlert.tsx
front-end/src/hooks/: useAlert.ts  useROS2Connection.ts
front-end/src/theme/: index.ts
front-end/src/types/: index.ts
scripts/: README.md
scripts/setup/: install_dependencies.sh
scripts/testing/: run_tests_and_optimize.sh
scripts/utils/: build_workspace.sh  check_dependencies.sh  launch_system.sh  start_mqtt_server.sh
src/: test_path_publisher.py
src/auto_control/: CMakeLists.txt  package.xml
src/auto_control/include/auto_control/: pure_pursuit_controller.hpp
src/auto_control/rviz/: control_visualization.rviz
src/auto_control/src/: controller_node.cpp  pure_pursuit_controller.cpp
src/auto_control/test/: test_controller.cpp
src/auto_integration_test/: CMakeLists.txt  package.xml
src/auto_integration_test/docs/: integration_test_guide.md
src/auto_integration_test/include/auto_integration_test/: error_handler.hpp  performance_optimizer.hpp  system_test_runner.hpp
src/auto_integration_test/launch/: auto_test.launch.xml
src/auto_integration_test/src/: error_handler.cpp  optimizer_main.cpp  performance_optimizer.cpp  system_test_runner.cpp  test_runner_main.cpp
src/auto_msgs/: CMakeLists.txt  package.xml
src/auto_msgs/msg/: GridMap.msg  PathPoint.msg  PlanningPath.msg  PlanningRequest.msg  VehicleControl.msg
src/auto_parking/: CMakeLists.txt  package.xml
src/auto_parking/entities/: parking_spot.hpp  vehicle_state.hpp
src/auto_parking/interface_adapters/: parking_mqtt_adapter.hpp
src/auto_parking/use_cases/: vehicle_physics_simulator.hpp
src/auto_perception/: CMakeLists.txt  package.xml
src/auto_perception/include/auto_perception/: object_detector.hpp
src/auto_perception/src/: object_detector.cpp  perception_node.cpp
src/auto_planning/: CMakeLists.txt  package.xml
src/auto_planning/docs/: performance_tuning_guide.md
src/auto_planning/env-hooks/: auto_planning.sh
src/auto_planning/include/auto_planning/: a_star_planner.hpp  decision_maker.hpp  hybrid_a_star_planner.hpp  optimized_a_star_planner.hpp
src/auto_planning/src/: a_star_planner.cpp  decision_maker.cpp  decision_visualization_node.cpp  hybrid_a_star_planner.cpp  optimized_a_star_planner.cpp  path_planner_node.cpp
src/auto_planning/test/: test_planner.cpp
src/auto_simulation/: CMakeLists.txt  package.xml
src/auto_simulation/config/: auto_driving.rviz
src/auto_simulation/include/auto_simulation/: json_utils.hpp  map_generator.hpp  mqtt_bridge.hpp  planning_request_manager.hpp  simulation_node.hpp  visualization_manager.hpp
src/auto_simulation/launch/: auto_driving.launch.xml
src/auto_simulation/scripts/: json_bridge_test.py  simple_bridge.py  websocket_bridge.py
src/auto_simulation/src/: map_generator.cpp  mqtt_bridge.cpp  mqtt_bridge_node.cpp  simulation_node.cpp
src/carla_integration/: CMakeLists.txt  STRUCTURE.md  package.xml
src/carla_integration/include/carla_integration/: carla_control_adapter.hpp  carla_map_adapter.hpp  carla_map_adapter_simple.hpp  carla_sensor_adapter.hpp
src/carla_integration/launch/: carla_integration.launch.py  sensors_only.launch.py
src/carla_integration/src/: carla_control_adapter.cpp  carla_map_adapter.cpp  carla_sensor_adapter.cpp
test_results/: test_summary_20250526_140110.html  test_summary_20250526_143215.html  test_summary_20250526_143616.html  test_summary_20250603_180230.html  unit_test_results.txt
